// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test salesItems should render SalesItems 1`] = `
<div
  className="sales"
>
  <h2
    className="sales-h2"
  >
    Sales Summary
  </h2>
  <ForwardRef(Paper)
    className="sales-paper"
    square={true}
  >
    <ForwardRef(Tabs)
      aria-label="disabled tabs example"
      centered={true}
      elevation={20}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        label="Available"
      />
      <ForwardRef(Tab)
        label="Sold"
      />
    </ForwardRef(Tabs)>
    <TabPanel
      index={0}
      value={0}
    >
      <Connect(AvailableSales) />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <Connect(SoldItems) />
    </TabPanel>
  </ForwardRef(Paper)>
</div>
`;

exports[`test salesItems should test onChange 1`] = `
<div
  className="sales"
>
  <h2
    className="sales-h2"
  >
    Sales Summary
  </h2>
  <ForwardRef(Paper)
    className="sales-paper"
    square={true}
  >
    <ForwardRef(Tabs)
      aria-label="disabled tabs example"
      centered={true}
      elevation={20}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      variant="fullWidth"
    >
      <ForwardRef(Tab)
        label="Available"
      />
      <ForwardRef(Tab)
        label="Sold"
      />
    </ForwardRef(Tabs)>
    <TabPanel
      index={0}
    >
      <Connect(AvailableSales) />
    </TabPanel>
    <TabPanel
      index={1}
    >
      <Connect(SoldItems) />
    </TabPanel>
  </ForwardRef(Paper)>
</div>
`;
